Add a new setExclusiveEdge call in the protocol

This can be used to disambiguate the exclusive edge when the anchors are on a corner (so there would be 2 candidates)

it's quite quick and dirty mostly to understand if we do want to push for something along the lines (it should at least do a protocol error when the requested edge is not within the anchors)

BUG:475700